--- a/WindowsFormsAppvalll/WindowsFormsAppvalll.csproj
+++ b/WindowsFormsAppvalll/WindowsFormsAppvalll.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{782278C6-02BE-4568-9D70-A853BA13C0C1}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>WindowsFormsAppvalll</RootNamespace>
-    <AssemblyName>WindowsFormsAppvalll</AssemblyName>
+    <AssemblyName>AlfaSugarzasMero</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -81,6 +81,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Counter.cs" />
